# bili-helper

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md
at-orchestrator/: .gitignore  AGENTS.md  SKILL.md  pyproject.toml
at-orchestrator/src/at_orchestrator/: classifier.py  constants.py  db.py  dispatcher.py  fetcher.py  main.py  models.py  processor.py  replier.py
at-orchestrator/tests/: conftest.py  test_classifier.py  test_cli.py  test_constants.py  test_db.py  test_dispatcher.py  test_dispatcher_advanced.py  test_fetcher.py  test_integration_e2e.py  test_integration_fetch.py  test_models.py  test_processor.py  test_replier.py  test_replier_pm.py
bili-core/: AGENTS.md  pyproject.toml
bili-core/src/bili_core/: __init__.py  api_base.py  auth.py  errors.py  fav.py  http_client.py  search.py  signing.py  video_info.py
bili-core/tests/: test_auth.py  test_errors.py  test_http_client.py  test_signing.py
dyn-publisher/: SKILL.md  pyproject.toml
dyn-publisher/src/dyn_publisher/: __init__.py  api.py  main.py  template.py
dyn-publisher/tests/: test_api.py  test_cli.py  test_template.py
fav-organizer/: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
fav-organizer/src/: auth.py  classifier_llm.py  classifier_upper.py  classifier_zone.py  errors.py  executor.py  fav_api.py  http_client.py  main.py  models.py  planner.py  preview.py  scanner.py  signing.py  state_manager.py  video_api.py
fav-organizer/src/fav_organizer/: __init__.py  confirm.py  dedup.py  executor.py  fav_api.py  main.py  models.py  pipeline.py  planner.py  preview.py  scanner.py  state_manager.py  video_api.py
fav-organizer/tests/: test_auth.py  test_classifier_llm.py  test_classifier_upper.py  test_classifier_zone.py  test_confirm.py  test_dedup.py  test_executor.py  test_fav_api.py  test_http_client.py  test_integration.py  test_main.py  test_placeholder.py  test_planner.py  test_preview.py  test_scanner.py  test_signing.py  test_types.py
video-analyzer/: .gitignore  SKILL.md  pyproject.toml
video-analyzer/src/video_analyzer/: api_client.py  main.py  markdown_renderer.py  models.py
video-analyzer/tests/: test_integration.py  test_markdown_renderer.py  test_models.py
watch-later-recommender/: .gitignore  SKILL.md  pyproject.toml
watch-later-recommender/docs/: 2026-06-28-fav-target-design.md  2026-06-28-fav-target-plan.md
watch-later-recommender/src/watch_later_recommender/: __init__.py  api_client.py  main.py  models.py  prefs.py  recommender.py
watch-later-recommender/tests/: test_llm_result.py
