[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at-orchestrator"
version = "0.1.0"
description = "Bilibili up主 AT（@）互动编排工具 - 编排 AT 任务，自动扫描、基于规则执行"
authors = [
    {name = "Bili-Helper"},
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["bilibili", "at", "@", "orchestrator", "bili", "up主"]

dependencies = [
    "bili-core",
    "httpx>=0.25.0",
    "pydantic>=2.7.0",
]

[tool.uv.sources]
bili-core = { path = "../bili-core", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
at-orchestrator = "at_orchestrator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/at_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
