[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dyn-publisher"
version = "0.1.0"
description = "Bilibili dynamic publisher — publish text and image dynamics"
authors = [{name = "Bili-Helper"}]
requires-python = ">=3.12"
license = "MIT"
keywords = ["bilibili", "dynamic", "publish", "bili"]

dependencies = [
    "bili-core",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
bili-core = { path = "../bili-core", editable = true }

[project.scripts]
dyn-publisher = "dyn_publisher.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dyn_publisher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
