[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fav-organizer"
version = "0.1.0"
description = "Bilibili favorites organizer - clean invalid, deduplicate, and classify by zone/up主/LLM"
authors = [
    {name = "Bili-Helper"},
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["bilibili", "favorites", "organizer", "bili", "收藏夹"]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.7.0",
    "fastmcp>=3.0.0",
    "qrcode>=7.4.0",
    "asyncio>=3.4.3",
    "curl-cffi>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
fav-organizer = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
