[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fav-organizer"
version = "0.1.0"
description = "Bilibili favorites organizer - clean invalid, deduplicate, and classify by zone/up主/LLM"
authors = [
    {name = "Bili-Helper"},
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["bilibili", "favorites", "organizer", "bili", "收藏夹"]

dependencies = [
    "bili-core",
    "httpx>=0.25.0",
    "pydantic>=2.7.0",
    "qrcode>=7.4.0",
]

[tool.uv.sources]
bili-core = { path = "../bili-core", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
fav-organizer = "src.fav_organizer.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fav_organizer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
