[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-analyzer"
version = "0.1.0"
description = "Bilibili video analyzer - get video details, hot comments, PBP, AI summary, playurl, screenshots"
authors = [{name = "Bili-Helper"}]
requires-python = ">=3.12"
license = "MIT"
keywords = ["bilibili", "video", "analyzer", "bili", "视频分析"]

dependencies = [
    "bili-core",
    "httpx>=0.25.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
bili-core = { path = "../bili-core", editable = true }

[project.scripts]
video-analyzer = "video_analyzer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_analyzer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
